# github-deployment-controller

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
deploy/: crd.yaml  deployment.yaml  role.yaml  role_binding.yaml  serviceaccount.yaml
example/: githubdeployment.yaml
lib/: deployments.py  kube.py  run.py
