[tool.poetry]
name = "github-deployments-operator"
version = "0.1.0"
description = "An operator that updates Github Deployment API"
authors = ["Dann Bohn <djb44@psu.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
kopf = "^0.28.3"
kubernetes = "^11.0.0"
requests = "^2.24.0"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
